fix input style align

--- a/src/styles/forecastweather.less
+++ b/src/styles/forecastweather.less
@@ -12,9 +12,11 @@
   .forecast-weather-information {
     background-color: #ffffff;
     flex-grow: 1;
-    width: 100%;
+    width: calc(100% - 10px);
     border-radius: 20px;
     overflow: scroll;
     padding: 10px;
+    border-color:#ffffff;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1)
   }
 }
