--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -16,7 +16,7 @@
 
 @media screen and (min-width: 641px) {
   .content-wrapper {
-    width: 50%;
+    width: 60%;
   }
 }
 
