--- a/src/styles/layout.less
+++ b/src/styles/layout.less
@@ -5,6 +5,10 @@
   display: flex;
   flex-direction: column;
   min-width: 320px;
+  .layout-top{
+    width:100;
+    background-color:#ffffff;
+  }
   &-content {
     display: flex;
     flex-direction: column;
