--- a/src/styles/searchbar.less
+++ b/src/styles/searchbar.less
@@ -10,6 +10,12 @@
     height: auto;
     cursor: pointer;
   }
+  .ant-input-disabled {
+    color: #000000;
+    background-color: transparent;
+    border-color: transparent;
+    cursor: default;
+  }
   .ant-input-affix-wrapper {
     flex: 1;
     display: flex;
