--- a/src/styles/todayweather.less
+++ b/src/styles/todayweather.less
@@ -1,9 +1,10 @@
 .today-weather-wrapper {
-  width: 100%;
+  width: calc(100% - 10px);
   padding: 20px;
   border-color: #ffffff;
   background-color: #ffffff;
   border-radius: 20px;
+  box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.1);
   .today-weather-title {
     display: flex;
     flex-direction: row;
